feat: Refactor AsciiDisplay font handling; improve InputManager coordinate clamping; update StartMenuMode for cleaner key handling; revise TODO for completed tasks